# plataforma-alerta-colaborativo

./: .env  .flake8  .gitattributes  .gitignore  LICENCE  README.md  docker-compose.yaml  pyproject.toml  schema.yml
.github/workflows/: code-quality.yml
accounts/: admin.py  apps.py  models.py  signals.py  urls.py  validators.py  views.py
accounts/docs/: __init__.py  admin.py  auth.py  jwt.py  profile.py  simple.py  validation.py
accounts/migrations/: 0001_initial.py
accounts/serializers/: __init__.py  auth.py  profile.py  user.py
accounts/views/: __init__.py  admin.py  auth.py  legacy.py  profile.py  validation.py
alerts/: admin.py  models.py  urls.py  validators.py
alerts/docs/: __init__.py  simple.py
alerts/migrations/: 0001_initial.py
alerts/serializers/: __init__.py  alert.py  comment.py  post.py
alerts/views/: __init__.py  admin.py  alert.py  comment.py  post.py
core/: settings.py  urls.py
docker/: Dockerfile
